Style up a page in Chill Hop style

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,4 +3,7 @@
   flex-direction: row;
   height: 100vh;
   background-color: white;
+  background: url('./../public/images/background.png') no-repeat;
+  background-position: center;
+  background-size: cover;
 }
