--- a/src/components/playlist/Playlist.module.scss
+++ b/src/components/playlist/Playlist.module.scss
@@ -2,6 +2,7 @@
 	flex: 0.2;
 	background-color: white;
   box-shadow: -5px 0px 20px 0px #7d7c7c73;
+  background-color: #ffe2ab;
 
 	&__title {
 		margin: 1.5rem 2rem;
