--- a/src/components/player/Player.module.scss
+++ b/src/components/player/Player.module.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.player {
   flex: .8;
 
   display: flex;
@@ -7,46 +7,61 @@
   justify-content: center;
   gap: 2rem;
 
-	&__cover {
-		display: flex;
-		align-items: center;
-
-		max-width: 400px;
-
-		img {
-			width: 100%;
-		}
-	}
-
-  &__description {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-    align-items: center;
-    gap: .5rem;
-
-		&__title {
-			font-weight: 500;
-      font-size: 1.3rem;
-			color: #575757;
-		}
-
-		&__artist {
-			font-weight: 500;
-			font-size: 1rem;
-			color: #575757;
-		}
-	}
-
-  &__controls {
+  &__wrapper {
     display: flex;
-    gap: 10rem;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
+    
+    padding: 3rem;
+    box-shadow: 0px 0px 20px 0px rgba(125, 124, 124, 0.4509803922);
+    border-radius: 1rem;
+    background-color: #ffe2ab;
 
-    img {
-      width: 52px;
-      cursor: pointer;
+    &__cover {
+      display: flex;
+      align-items: center;
+  
+      max-width: 400px;
+  
+      img {
+        width: 100%;
+        border-radius: 1rem;
+      }
+    }
+  
+    &__description {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: .5rem;
+  
+      &__title {
+        font-weight: 500;
+        font-size: 1.3rem;
+        color: black;
+      }
+  
+      &__artist {
+        font-weight: 500;
+        font-size: 1rem;
+        color: black;
+      }
+    }
+  
+    &__controls {
+      display: flex;
+      gap: 5rem;
+      align-items: center;
+      justify-content: center;
+  
+      img {
+        width: 52px;
+        cursor: pointer;
+      }
     }
   }
 }
+
